1 Implemented the investment strategy details screen. 2 Implemented the investment saved goal screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,5 +372,8 @@
     </string>
     <string name="opt_for_this_if">OPT FOR THIS IF:</string>
     <string name="select">Select</string>
+    <string name="invest_in_this_strategy">Invest in this strategy</string>
+    <string name="saved_goals">Saved Goals</string>
+    <string name="add_a_goal">Add a goal</string>
 
 </resources>
