--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -388,5 +388,11 @@
     <string name="full_name">Full Name</string>
     <string name="date_of_birth_">Date Of Birth</string>
     <string name="name_of_guardian">Name Of Guardian</string>
+    <string name="address">Address</string>
+    <string name="city">City</string>
+    <string name="pincode">Pincode</string>
+    <string name="state">State</string>
+    <string name="country">Country</string>
+    <string name="check_mandate_status">Check mandate status</string>
 
 </resources>
