1: Implemented the encryption & decryption for APIs & tested it with back-end. 2: Implemented Signup APIs. 3: Worked on implementing APIs to get goal list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -296,6 +296,7 @@
     </string>
 
     <string name="key">S1D$F#q76S458G9h6u5DF7pk5T7Lpart</string>
+    <string name="iv">0123456789012345</string>
 
     <string name="send_to">Send To</string>
     <string name="app_lock_touch_id">App Lock (Touch ID)</string>
