--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -313,7 +313,7 @@
     <string name="my_profile">My Profile</string>
     <string name="transactions">Transactions</string>
     <string name="my_portfolio">My Portfolio</string>
-    <string name="saved_goal">Saved Goal</string>
+    <string name="saved_goal">Saved Goals</string>
     <string name="support">Support</string>
     <string name="notifications">Notifications</string>
     <string name="privacy_policy">Privacy Policy</string>
