--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -417,8 +417,10 @@
     <string name="alert_profile_reset">Your password has been reset successfully.</string>
     <string name="alert_profile_change">Your password has been changed successfully.</string>
     <string name="alert_third_level_category">Please add third level category data from the admin panel first.</string>
-    <string name="tap_here_to_see_the_fund_offer_document"><u>Tap here to see the fund offer document</u></string>
+    <string name="tap_here_to_see_the_fund_offer_document"><u>See the fund offer document</u></string>
 
     <string name="saved_goal_delete">Are you sure to delete this goal?</string>
 
+    <string name="new_user">New User</string>
+    <string name="existing_user">Existing User</string>
 </resources>
