--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -440,5 +440,5 @@
     <string name="income_slab">Income Slab</string>
 
     <string name="explore_all_funds">Explore All Funds</string>
-
+    <string name="coming_soon">Coming Soon.</string>
 </resources>
