--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="total_one_time_lumpsum_investment">Total One-time Lumpsum Investment</string>
     <string name="total_monthly_investment_sip">Total Monthly Investment (SIP)</string>
     <string name="place_order">Place Order</string>
+    <string name="checkout">Checkout</string>
     <string name="new_">New:</string>
     <string name="sip">SIP</string>
     <string name="lumpsum_amount">Lumpsum Amount</string>
