--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,6 +122,7 @@
     <string name="stop">Stop</string>
     <string name="start">Start</string>
     <string name="edit">Edit</string>
+    <string name="edit_funds">Edit Funds</string>
     <string name="redeem">Redeem</string>
     <string name="username">Username</string>
     <string name="login_start_investing">Login. Start investing.</string>
@@ -262,7 +263,7 @@
     <string name="pending">Pending</string>
     <string name="txt_default">Default</string>
     <string name="account_number">Account Number</string>
-    <string name="breach_name">Breach Name</string>
+    <string name="breach_name">Branch Name</string>
     <string name="ifsc_code">IFSC Code</string>
     <string name="add_new_bank_account">Add New Bank Account</string>
     <string name="select_bank">Select Bank</string>
@@ -343,7 +344,7 @@
     <string name="alert_profile_reset">Your password has been reset successfully.</string>
     <string name="alert_profile_change">Your password has been changed successfully.</string>
     <string name="alert_third_level_category">Please add third level category data from the admin panel first.</string>
-    <string name="tap_here_to_see_the_fund_offer_document"><u>See the fund offer document</u></string>
+    <string name="tap_here_to_see_the_fund_offer_document"><u>Scheme document</u></string>
 
     <string name="saved_goal_delete">Are you sure to delete this goal?</string>
     <string name="e_kyc">E-KYC</string>
