--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -686,5 +686,7 @@
     <string name="enter_amount">Enter Amount</string>
     <string name="select_bank_mandate">Use Selected Bank Mandate</string>
     <string name="select_bank_use">Use Selected Bank</string>
+    <string name="failed">Failed</string>
+    <string name="remarks_">Remarks:</string>
     <!--<string name="select_country">Select Country</string>-->
 </resources>
